--- a/contact.html
+++ b/contact.html
@@ -2242,7 +2242,7 @@ p {
             <header id="header">
               <!--  Brand Logo  -->
               <a class="nav-brand" href="" target="_blank">
-                <img id="header-text" src="assets/image/sr7.jpg" alt="Pixel Skincare">
+                <img id="header-text" src="assets/image/sr7.jpg" alt="SR7">
               </a>
               
               <!--  Toggle Menu for Mobile  -->
