--- a/contact.html
+++ b/contact.html
@@ -2242,7 +2242,7 @@ p {
             <header id="header">
               <!--  Brand Logo  -->
               <a class="nav-brand" href="" target="_blank">
-                <img id="header-text" src="assets/image/sr7.jpg" alt="SR7">
+                <img id="header-text" src="https://4.bp.blogspot.com/-56-9kxaT66g/TnIbbmDjbiI/AAAAAAAAACc/PNeQ19AkIPc/s1600/White+Car+from+logo.jpg" alt="SR7">
               </a>
               
               <!--  Toggle Menu for Mobile  -->
