--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="js" href="assets/js/js.js"> 
         <style>
-            @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
+		@import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
 
 /* Global */
 * {
@@ -330,7 +330,7 @@ section#about{
   
   /*  Header  */
   .nav-brand img{
-    height: 10em;
+    height: 77px;
   }
   .toggle-menu{
     display: none;
@@ -2030,7 +2030,6 @@ p {
   --tw-content: "";
   content: var(--tw-content);
 }
-
 @-webkit-keyframes sk-bounce {
   0%,
   100% {
@@ -2232,8 +2231,7 @@ p {
     grid-template-columns: repeat(7, minmax(0, 1fr)) !important;
   }
 }
-        </style>
-        
+	</style>
     </head>
         <body>
             <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
