--- a/contact.html
+++ b/contact.html
@@ -330,7 +330,7 @@ section#about{
   
   /*  Header  */
   .nav-brand img{
-    height: 10em;
+    height: 77px;
   }
   .toggle-menu{
     display: none;
