--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="js" href="assets/js/js.js"> 
         <style>
-		@import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
+          @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
 
 /* Global */
 * {
@@ -104,10 +104,9 @@ header:before{
   -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.22);
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.22);
 }
-.nav-brand img{
-  width: auto;
-  padding-top: 1em;
-  height: 7.5em;
+.nav-brand img {
+    width: auto;
+    height: 20px;
 }
 .toggle-menu{
   display: block;
@@ -2231,7 +2230,8 @@ p {
     grid-template-columns: repeat(7, minmax(0, 1fr)) !important;
   }
 }
-	</style>
+        </style>
+        
     </head>
         <body>
             <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
