--- a/home.html
+++ b/home.html
@@ -8,8 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"> 
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="js" href="assets/js/js.js"> 
-         <style>
-            @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
+        <style>
+          @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
 
 /* Global */
 * {
@@ -104,10 +104,9 @@ header:before{
   -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.22);
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.22);
 }
-.nav-brand img{
-  width: auto;
-  padding-top: 1em;
-  height: 7.5em;
+.nav-brand img {
+    width: auto;
+    height: 20px;
 }
 .toggle-menu{
   display: block;
@@ -2030,7 +2029,6 @@ p {
   --tw-content: "";
   content: var(--tw-content);
 }
-
 @-webkit-keyframes sk-bounce {
   0%,
   100% {
@@ -2237,6 +2235,7 @@ p {
         <body>
             <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 
+
             <header id="header">
               <!--  Brand Logo  -->
               <a class="nav-brand" href="" target="_blank">
@@ -2265,26 +2264,32 @@ p {
               </nav>
             </header>
 
-<!-- Featured Section -->
-<section id="featured" style="
-    padding-bottom: 70px;">
-    <div class="title title-left">
-      <span class="line line-right"></span><h3>RATATATATAAA!</h3>
-    </div>
-    <div class="wrapper">
-      <div class="image">
-        <img src="https://media.giphy.com/media/WqsIOopBaF4oE/giphy.gif" alt="">
-        
+              
+<!-- Contact Section --><section id="contact" style="
+        padding-left: 0px;
+        padding-right: 0px;
+        padding-top: 50px;
+        padding-bottom: 70px;">
+  <div class="content-container">
+    <form action="https://api.web3forms.com/submit" method="POST" class="contact-left">
+      <div class="contact-left-title">
+        <h2>get in touch</h2>
+        <hr>
       </div>
-      <div class="text">
-        <h2>Brand new CARS</h2>
-        <p>Car as life for Humans as Humans as Emotions for there CARS  _SR7</p>
-        <a href="about.html" class=btn>Details</a>
-      </div>
-    </div>
-  </section>
+      <input type="hidden" name="access_key" value="c63572d2-d471-4d7f-9cff-0d37d9f7b9b7">
+      <input type="text" name="name" placeholder="your Name" class="contact-inputs" required>
+      <input type="text" name="email" placeholder="your Email" class="contact-inputs" required>
+      <input type="text" name="address" placeholder="your Address" class="contact-inputs" required>
+      <textarea name="message" placeholder="Your message" class="contact-inputs" required></textarea>
+      <button type="submit">submit <img src="" alt=""></button>
+    </form>
+<div class="contact-right">
+  <img src="" alt="">
+</div>
+  </div>
+</section>
 
-  <!-- footer section-->
+<!-- footer section-->
   <footer class="lg:h-screen flex items-end justify-center">
     <div class="w-full bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black">
       <div class="container">
