--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet"> 
         <link rel="stylesheet" href="assets/css/style.css">
         <link rel="js" href="assets/js/js.js"> 
-         <style>
-            @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
+        <style>
+          @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
 
 /* Global */
 * {
@@ -104,10 +104,9 @@ header:before{
   -moz-box-shadow: 0px 7px 5px 0px rgba(0,0,0,0.22);
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.22);
 }
-.nav-brand img{
-  width: auto;
-  padding-top: 1em;
-  height: 7.5em;
+.nav-brand img {
+    width: auto;
+    height: 20px;
 }
 .toggle-menu{
   display: block;
@@ -2030,7 +2029,6 @@ p {
   --tw-content: "";
   content: var(--tw-content);
 }
-
 @-webkit-keyframes sk-bounce {
   0%,
   100% {
@@ -2233,7 +2231,6 @@ p {
   }
 }
         </style>
-        
     </head>
         <body>
             <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
